31-July-2011 Michael Babker Version 1.8 Changes
+ Add scriptfiles to the files packages to do basic pre-install checks
+ Add error checks for SQL in scriptfiles

29-July-2011 Michael Babker Version 1.8 Changes
# Correct the package XML so that it uninstalls the getID3 library too
~ Add script to add dummy menu item to supress error message at uninstall
~ Change version check notice to use JText
~ Add error checking to plugin activation functions

26-July-2011 Michael Babker Version 1.8 Changes
# File paths were incorrectly getting the site path stored with them
! Rework preg_match check in RSS feed to prevent path disclosure

23-July-2011 Michael Babker Version 1.8 Changes
- Removed Information view
- Removed Components submenu items
+ Added cpanel view as new default landing
+ Added Akeeba Live Update support

21-July-2011 Michael Babker Version 1.8 Changes
+ Add script to display the position within the playing file

17-July-2011 Michael Babker Version 1.8 Changes
+ Add ability to select default sorting for feed view
+ Add pt-BR translation
~ Update Akeeba Backup System Restore Point definition
~ Convert Information view to JText
# Correct a bug with the published count on feeds admin view
~ Added additional SQL security from Platform 11.1

14-July-2011 Michael Babker Version 1.7 Changes
+ Add ability to link to off-site media

13-July-2011 Michael Babker Version 1.8 Changes
+ Allow front end feed view to render onContentPrepare plugin
+ Add parameter to render the media player on the feed view
~ Optimize the content plugin to handle data from the feed view

12-July-2011 Michael Babker Version 1.8 Changes
+ Add script to display the runtime

10-July-2011 Michael Babker Version 1.8 Changes
+ Add SoundManager2 media player
~ Add demo MP3 player from SM2 site

10-July-2011 Michael Babker Version 1.7 Changes
# Fix a bug in custom code rendering for content plugin

5-July-2011 Michael Babker Version 1.8 Changes
# Fix routing bug for front end edit