@@ -5,4 +5,6 @@
 ; Translation performed by Manoel Silva
 
 MOD_PODCASTMANAGER="Podcast Manager"
-MOD_PODCASTMANAGER_XML_DESCRIPTION="O módulo do Podcast Manager oferece links para os visitantes do site assinarem seus feeds de podcasts."
+MOD_PODCASTMANAGER_ERROR_COMPONENT="Você não tem o Podcast Manager instalado.  Favor instalá-lo antes de instalar este pacote de override."
+MOD_PODCASTMANAGER_ERROR_INSTALL_J17="Esta versão do Podcast Manager requer Joomla! 1.7 ou mais recente"
+MOD_PODCASTMANAGER_XML_DESCRIPTION="O módulo Podcast Manager provê links para visitantes de sites assinarem a seus feeds de podcast."
