@@ -5,4 +5,6 @@
 ; Translation performed by Manoel Silva
 
 MOD_PODCASTMANAGERFEED="Listagem de Feeds do Podcast Manager"
-MOD_PODCASTMANAGERFEED_XML_DESCRIPTION="O módulo de Listagem de Feeds do Podcast Manager oferece uma listagem dos últimos episódios de podcast publicados em um feed específico."
+MOD_PODCASTMANAGERFEED_ERROR_COMPONENT="Você não tem o Podcast Manager instalado.  Favor instalá-lo antes de instalar este pacote de override."
+MOD_PODCASTMANAGERFEED_ERROR_INSTALL_J17="Esta versão do Podcast Manager requer Joomla! 1.7 ou mais recente"
+MOD_PODCASTMANAGERFEED_XML_DESCRIPTION="O módulo Listagem de Feeds do Podcast Manager provê uma listagem dos mais recentes episódios podcast publicados em um feed específico."
