@@ -1,0 +1,9 @@
+; Podcast Manager for Joomla!
+; Copyright (C) 2011 Michael Babker. All rights reserved.
+; Note : All ini files need to be saved as UTF-8 - No BOM
+; Double quotes in the values have to be formatted as "_QQ_"
+; Translation performed by Manoel Silva
+
+PLG_CONTENT_PODCASTMANAGER="Conteúdo - Podcast Manger"
+PLG_CONTENT_PODCASTMANAGER_ERROR_PULLING_DATABASE="Não foi possível obter a informação para o podcast %s da base de dados."
+PLG_CONTENT_PODCASTMANAGER_XML_DESCRIPTION="O plugin Podcast Manager transfaorma {podcast Title} tags em players e links"
