@@ -1,0 +1,10 @@
+; Podcast Manager for Joomla!
+; Copyright (C) 2011 Michael Babker. All rights reserved.
+; Note : All ini files need to be saved as UTF-8 - No BOM
+; Double quotes in the values have to be formatted as "_QQ_"
+; Translation performed by Manoel Silva
+
+PLG_EDITORS-XTD_PODCASTMANAGER="Botão - Podcast Manger"
+PLG_EDITORS-XTD_PODCASTMANAGER_BUTTON="Podcast"
+PLG_EDITORS-XTD_PODCASTMANAGER_BUTTON_TOOLTIP="Selecione um episódio de podcast a ser adicionado ao artigo."
+PLG_EDITORS-XTD_PODCASTMANAGER_XML_DESCRIPTION="O Plugin Botão Podcast Manager adiciona um botão Podcast ao editor de artigos"
