@@ -1,0 +1,10 @@
+; Podcast Manager for Joomla!
+; Copyright (C) 2011 Michael Babker. All rights reserved.
+; Note : All ini files need to be saved as UTF-8 - No BOM
+; Double quotes in the values have to be formatted as "_QQ_"
+; Translation performed by Manoel Silva
+
+PLG_EDITORS-XTD_PODCASTMANAGER="Botão - Podcast Manger"
+PLG_EDITORS-XTD_PODCASTMANAGER_ERROR_ACTIVATING_PLUGIN="Não foi possível ativar automaticamente o plugin "_QQ_"Botão - Podcast Manager"_QQ_""
+PLG_EDITORS-XTD_PODCASTMANAGER_ERROR_INSTALL_J17="Esta versão do Podcast Manager requer Joomla! 1.7 ou mais recente"
+PLG_EDITORS-XTD_PODCASTMANAGER_XML_DESCRIPTION="O plugin Botão Podcast Manager adiciona um botão Podcast ao editor de artigos"
