@@ -17,5 +17,7 @@
 	<languages>
 		<language tag="en-GB">language/en-GB/en-GB.plg_editors-xtd_podcastmanager.ini</language>
 		<language tag="en-GB">language/en-GB/en-GB.plg_editors-xtd_podcastmanager.sys.ini</language>
+		<language tag="pt-BR">language/pt-BR/pt-BR.plg_editors-xtd_podcastmanager.ini</language>
+		<language tag="pt-BR">language/pt-BR/pt-BR.plg_editors-xtd_podcastmanager.sys.ini</language>
 	</languages>
 </extension>
