@@ -1,3 +1,6 @@
+2-August-2011 Michael Babker
+~ Update pt-BR translation
+
 31-July-2011 Michael Babker Version 1.8 Changes
 + Add scriptfiles to the files packages to do basic pre-install checks
 + Add error checks for SQL in scriptfiles
